Change h1 and h2 in promition secion
This is more cool headers.

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 	        			<div class="row">
 	        				<div class="col-s-12 col-m-12">
 	        					<h1>Your awesome title</h1>
-	        					<h2>Secound title</h2>
-	        					<h3>This is secound title</h3>
+	        					<h2>Taki sobie tytuł</h2>
+	        					<h3>Taki sobie tytuł 2</h3>
 	        				</div>
                         </div>
         				<div class="row">
