Change h1, Add <p> under h1

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 	        		<div class="col-s-12 col-m-8">
 	        			<div class="row">
 	        				<div class="col-s-12 col-m-12">
-	        					<h1>Your awesome title</h1>
+	        					<h1>Header 1</h1>
+	        					<p>Teraz ćwiczę robienie commitów</p>
 	        					<h2>Taki sobie tytuł</h2>
 	        					<h3>Taki sobie tytuł 2</h3>
 	        				</div>
